--- a/select_keypoints.ipynb
+++ b/select_keypoints.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='d2c2d1ae-3af7-4d42-b5c2-9601ca277190'></div>"
+      "text/html": "<div id='5bd511c0-9889-4da0-b3a9-180af7790ff6'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,12 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save out the results for use in your notebook\n",
-    "f = open('face_correspondeces.pckl','wb')\n",
+    "f = open('faceswap_correspondeces.pckl','wb')\n",
     "pickle.dump((image1,image2,coords1,coords2),f)\n",
     "f.close()"
    ]
